Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    READ
    WRITE

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM ID SEMICOLON Block DOT
Rule 2     Block -> Declarations CompoundStatement
Rule 3     Declarations -> VarDeclarationPart FunctionDeclarations
Rule 4     VarDeclarationPart -> VAR VarDeclarationList
Rule 5     VarDeclarationPart -> empty
Rule 6     VarDeclarationList -> VarDeclaration
Rule 7     VarDeclarationList -> VarDeclarationList VarDeclaration
Rule 8     VarDeclaration -> IdList COLON Type SEMICOLON
Rule 9     IdList -> ID
Rule 10    IdList -> ID COMMA IdList
Rule 11    Type -> BasicType
Rule 12    Type -> ArrayType
Rule 13    BasicType -> INTEGER
Rule 14    BasicType -> STRING
Rule 15    BasicType -> BOOLEAN
Rule 16    ArrayType -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF BasicType
Rule 17    FunctionDeclarations -> FunctionDeclaration FunctionDeclarations
Rule 18    FunctionDeclarations -> empty
Rule 19    FunctionDeclaration -> FUNCTION ID LPAREN FormalParameters RPAREN COLON BasicType SEMICOLON Declarations CompoundStatement
Rule 20    FormalParameters -> ID COLON Type
Rule 21    FormalParameters -> ID COLON Type SEMICOLON FormalParameters
Rule 22    FormalParameters -> empty
Rule 23    CompoundStatement -> BEGIN StatementList END
Rule 24    StatementList -> Statement
Rule 25    StatementList -> StatementList SEMICOLON Statement
Rule 26    Statement -> AssignmentStatement
Rule 27    Statement -> WriteStatement
Rule 28    Statement -> ReadStatement
Rule 29    Statement -> IfStatement
Rule 30    Statement -> WhileStatement
Rule 31    Statement -> ForStatement
Rule 32    Statement -> CompoundStatement
Rule 33    Statement -> empty
Rule 34    ReadStatement -> READLN LPAREN ArrayAccess RPAREN
Rule 35    ReadStatement -> READLN LPAREN ID RPAREN
Rule 36    AssignmentStatement -> ID ASSIGN Expression
Rule 37    AssignmentStatement -> ArrayAccess ASSIGN Expression
Rule 38    WriteStatement -> WRITELN LPAREN ExpressionList RPAREN
Rule 39    ExpressionList -> Expression
Rule 40    ExpressionList -> ExpressionList COMMA Expression
Rule 41    Expression -> LENGTH LPAREN Expression RPAREN
Rule 42    IfStatement -> IF Expression THEN Statement
Rule 43    IfStatement -> IF Expression THEN Statement ELSE Statement
Rule 44    WhileStatement -> WHILE Expression DO Statement
Rule 45    ForStatement -> FOR ID ASSIGN Expression TO Expression DO Statement
Rule 46    Expression -> NUMBER
Rule 47    Expression -> LPAREN Expression RPAREN
Rule 48    Expression -> TRUE
Rule 49    Expression -> FALSE
Rule 50    Expression -> STRING_LITERAL
Rule 51    Expression -> ID
Rule 52    Expression -> ID LBRACKET Expression RBRACKET
Rule 53    Expression -> ID LPAREN ActualParameters RPAREN
Rule 54    ActualParameters -> Expression
Rule 55    ActualParameters -> Expression COMMA ActualParameters
Rule 56    ActualParameters -> empty
Rule 57    Expression -> Expression PLUS Expression
Rule 58    Expression -> Expression MINUS Expression
Rule 59    Expression -> Expression TIMES Expression
Rule 60    Expression -> Expression MOD Expression
Rule 61    Expression -> Expression DIV Expression
Rule 62    Expression -> Expression LT Expression
Rule 63    Expression -> Expression GT Expression
Rule 64    Expression -> Expression EQ Expression
Rule 65    Expression -> Expression NEQ Expression
Rule 66    Expression -> Expression LTE Expression
Rule 67    Expression -> Expression GTE Expression
Rule 68    Expression -> Expression AND Expression
Rule 69    Expression -> Expression OR Expression
Rule 70    ArrayAccess -> ID LBRACKET Expression RBRACKET
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AND                  : 68
ARRAY                : 16
ASSIGN               : 36 37 45
BEGIN                : 23
BOOLEAN              : 15
COLON                : 8 19 20 21
COMMA                : 10 40 55
DIV                  : 61
DO                   : 44 45
DOT                  : 1
DOTDOT               : 16
ELSE                 : 43
END                  : 23
EQ                   : 64
FALSE                : 49
FOR                  : 45
FUNCTION             : 19
GT                   : 63
GTE                  : 67
ID                   : 1 9 10 19 20 21 35 36 45 51 52 53 70
IF                   : 42 43
INTEGER              : 13
LBRACKET             : 16 52 70
LENGTH               : 41
LPAREN               : 19 34 35 38 41 47 53
LT                   : 62
LTE                  : 66
MINUS                : 58
MOD                  : 60
NEQ                  : 65
NUMBER               : 16 16 46
OF                   : 16
OR                   : 69
PLUS                 : 57
PROGRAM              : 1
RBRACKET             : 16 52 70
READ                 : 
READLN               : 34 35
RPAREN               : 19 34 35 38 41 47 53
SEMICOLON            : 1 8 19 21 25
STRING               : 14
STRING_LITERAL       : 50
THEN                 : 42 43
TIMES                : 59
TO                   : 45
TRUE                 : 48
VAR                  : 4
WHILE                : 44
WRITE                : 
WRITELN              : 38
error                : 

Nonterminals, with rules where they appear

ActualParameters     : 53 55
ArrayAccess          : 34 37
ArrayType            : 12
AssignmentStatement  : 26
BasicType            : 11 16 19
Block                : 1
CompoundStatement    : 2 19 32
Declarations         : 2 19
Expression           : 36 37 39 40 41 42 43 44 45 45 47 52 54 55 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70
ExpressionList       : 38 40
ForStatement         : 31
FormalParameters     : 19 21
FunctionDeclaration  : 17
FunctionDeclarations : 3 17
IdList               : 8 10
IfStatement          : 29
Program              : 0
ReadStatement        : 28
Statement            : 24 25 42 43 43 44 45
StatementList        : 23 25
Type                 : 8 20 21
VarDeclaration       : 6 7
VarDeclarationList   : 4 7
VarDeclarationPart   : 3
WhileStatement       : 30
WriteStatement       : 27
empty                : 5 18 22 33 56

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM ID SEMICOLON Block DOT

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM . ID SEMICOLON Block DOT

    ID              shift and go to state 3


state 3

    (1) Program -> PROGRAM ID . SEMICOLON Block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) Program -> PROGRAM ID SEMICOLON . Block DOT
    (2) Block -> . Declarations CompoundStatement
    (3) Declarations -> . VarDeclarationPart FunctionDeclarations
    (4) VarDeclarationPart -> . VAR VarDeclarationList
    (5) VarDeclarationPart -> . empty
    (71) empty -> .

    VAR             shift and go to state 8
    FUNCTION        reduce using rule 71 (empty -> .)
    BEGIN           reduce using rule 71 (empty -> .)

    Block                          shift and go to state 5
    Declarations                   shift and go to state 6
    VarDeclarationPart             shift and go to state 7
    empty                          shift and go to state 9

state 5

    (1) Program -> PROGRAM ID SEMICOLON Block . DOT

    DOT             shift and go to state 10


state 6

    (2) Block -> Declarations . CompoundStatement
    (23) CompoundStatement -> . BEGIN StatementList END

    BEGIN           shift and go to state 12

    CompoundStatement              shift and go to state 11

state 7

    (3) Declarations -> VarDeclarationPart . FunctionDeclarations
    (17) FunctionDeclarations -> . FunctionDeclaration FunctionDeclarations
    (18) FunctionDeclarations -> . empty
    (19) FunctionDeclaration -> . FUNCTION ID LPAREN FormalParameters RPAREN COLON BasicType SEMICOLON Declarations CompoundStatement
    (71) empty -> .

    FUNCTION        shift and go to state 16
    BEGIN           reduce using rule 71 (empty -> .)

    FunctionDeclarations           shift and go to state 13
    FunctionDeclaration            shift and go to state 14
    empty                          shift and go to state 15

state 8

    (4) VarDeclarationPart -> VAR . VarDeclarationList
    (6) VarDeclarationList -> . VarDeclaration
    (7) VarDeclarationList -> . VarDeclarationList VarDeclaration
    (8) VarDeclaration -> . IdList COLON Type SEMICOLON
    (9) IdList -> . ID
    (10) IdList -> . ID COMMA IdList

    ID              shift and go to state 20

    VarDeclarationList             shift and go to state 17
    VarDeclaration                 shift and go to state 18
    IdList                         shift and go to state 19

state 9

    (5) VarDeclarationPart -> empty .

    FUNCTION        reduce using rule 5 (VarDeclarationPart -> empty .)
    BEGIN           reduce using rule 5 (VarDeclarationPart -> empty .)


state 10

    (1) Program -> PROGRAM ID SEMICOLON Block DOT .

    $end            reduce using rule 1 (Program -> PROGRAM ID SEMICOLON Block DOT .)


state 11

    (2) Block -> Declarations CompoundStatement .

    DOT             reduce using rule 2 (Block -> Declarations CompoundStatement .)


state 12

    (23) CompoundStatement -> BEGIN . StatementList END
    (24) StatementList -> . Statement
    (25) StatementList -> . StatementList SEMICOLON Statement
    (26) Statement -> . AssignmentStatement
    (27) Statement -> . WriteStatement
    (28) Statement -> . ReadStatement
    (29) Statement -> . IfStatement
    (30) Statement -> . WhileStatement
    (31) Statement -> . ForStatement
    (32) Statement -> . CompoundStatement
    (33) Statement -> . empty
    (36) AssignmentStatement -> . ID ASSIGN Expression
    (37) AssignmentStatement -> . ArrayAccess ASSIGN Expression
    (38) WriteStatement -> . WRITELN LPAREN ExpressionList RPAREN
    (34) ReadStatement -> . READLN LPAREN ArrayAccess RPAREN
    (35) ReadStatement -> . READLN LPAREN ID RPAREN
    (42) IfStatement -> . IF Expression THEN Statement
    (43) IfStatement -> . IF Expression THEN Statement ELSE Statement
    (44) WhileStatement -> . WHILE Expression DO Statement
    (45) ForStatement -> . FOR ID ASSIGN Expression TO Expression DO Statement
    (23) CompoundStatement -> . BEGIN StatementList END
    (71) empty -> .
    (70) ArrayAccess -> . ID LBRACKET Expression RBRACKET

    ID              shift and go to state 31
    WRITELN         shift and go to state 33
    READLN          shift and go to state 34
    IF              shift and go to state 35
    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    BEGIN           shift and go to state 12
    END             reduce using rule 71 (empty -> .)
    SEMICOLON       reduce using rule 71 (empty -> .)

    StatementList                  shift and go to state 21
    Statement                      shift and go to state 22
    AssignmentStatement            shift and go to state 23
    WriteStatement                 shift and go to state 24
    ReadStatement                  shift and go to state 25
    IfStatement                    shift and go to state 26
    WhileStatement                 shift and go to state 27
    ForStatement                   shift and go to state 28
    CompoundStatement              shift and go to state 29
    empty                          shift and go to state 30
    ArrayAccess                    shift and go to state 32

state 13

    (3) Declarations -> VarDeclarationPart FunctionDeclarations .

    BEGIN           reduce using rule 3 (Declarations -> VarDeclarationPart FunctionDeclarations .)


state 14

    (17) FunctionDeclarations -> FunctionDeclaration . FunctionDeclarations
    (17) FunctionDeclarations -> . FunctionDeclaration FunctionDeclarations
    (18) FunctionDeclarations -> . empty
    (19) FunctionDeclaration -> . FUNCTION ID LPAREN FormalParameters RPAREN COLON BasicType SEMICOLON Declarations CompoundStatement
    (71) empty -> .

    FUNCTION        shift and go to state 16
    BEGIN           reduce using rule 71 (empty -> .)

    FunctionDeclaration            shift and go to state 14
    FunctionDeclarations           shift and go to state 38
    empty                          shift and go to state 15

state 15

    (18) FunctionDeclarations -> empty .

    BEGIN           reduce using rule 18 (FunctionDeclarations -> empty .)


state 16

    (19) FunctionDeclaration -> FUNCTION . ID LPAREN FormalParameters RPAREN COLON BasicType SEMICOLON Declarations CompoundStatement

    ID              shift and go to state 39


state 17

    (4) VarDeclarationPart -> VAR VarDeclarationList .
    (7) VarDeclarationList -> VarDeclarationList . VarDeclaration
    (8) VarDeclaration -> . IdList COLON Type SEMICOLON
    (9) IdList -> . ID
    (10) IdList -> . ID COMMA IdList

    FUNCTION        reduce using rule 4 (VarDeclarationPart -> VAR VarDeclarationList .)
    BEGIN           reduce using rule 4 (VarDeclarationPart -> VAR VarDeclarationList .)
    ID              shift and go to state 20

    VarDeclaration                 shift and go to state 40
    IdList                         shift and go to state 19

state 18

    (6) VarDeclarationList -> VarDeclaration .

    ID              reduce using rule 6 (VarDeclarationList -> VarDeclaration .)
    FUNCTION        reduce using rule 6 (VarDeclarationList -> VarDeclaration .)
    BEGIN           reduce using rule 6 (VarDeclarationList -> VarDeclaration .)


state 19

    (8) VarDeclaration -> IdList . COLON Type SEMICOLON

    COLON           shift and go to state 41


state 20

    (9) IdList -> ID .
    (10) IdList -> ID . COMMA IdList

    COLON           reduce using rule 9 (IdList -> ID .)
    COMMA           shift and go to state 42


state 21

    (23) CompoundStatement -> BEGIN StatementList . END
    (25) StatementList -> StatementList . SEMICOLON Statement

    END             shift and go to state 43
    SEMICOLON       shift and go to state 44


state 22

    (24) StatementList -> Statement .

    END             reduce using rule 24 (StatementList -> Statement .)
    SEMICOLON       reduce using rule 24 (StatementList -> Statement .)


state 23

    (26) Statement -> AssignmentStatement .

    END             reduce using rule 26 (Statement -> AssignmentStatement .)
    SEMICOLON       reduce using rule 26 (Statement -> AssignmentStatement .)
    ELSE            reduce using rule 26 (Statement -> AssignmentStatement .)


state 24

    (27) Statement -> WriteStatement .

    END             reduce using rule 27 (Statement -> WriteStatement .)
    SEMICOLON       reduce using rule 27 (Statement -> WriteStatement .)
    ELSE            reduce using rule 27 (Statement -> WriteStatement .)


state 25

    (28) Statement -> ReadStatement .

    END             reduce using rule 28 (Statement -> ReadStatement .)
    SEMICOLON       reduce using rule 28 (Statement -> ReadStatement .)
    ELSE            reduce using rule 28 (Statement -> ReadStatement .)


state 26

    (29) Statement -> IfStatement .

    END             reduce using rule 29 (Statement -> IfStatement .)
    SEMICOLON       reduce using rule 29 (Statement -> IfStatement .)
    ELSE            reduce using rule 29 (Statement -> IfStatement .)


state 27

    (30) Statement -> WhileStatement .

    END             reduce using rule 30 (Statement -> WhileStatement .)
    SEMICOLON       reduce using rule 30 (Statement -> WhileStatement .)
    ELSE            reduce using rule 30 (Statement -> WhileStatement .)


state 28

    (31) Statement -> ForStatement .

    END             reduce using rule 31 (Statement -> ForStatement .)
    SEMICOLON       reduce using rule 31 (Statement -> ForStatement .)
    ELSE            reduce using rule 31 (Statement -> ForStatement .)


state 29

    (32) Statement -> CompoundStatement .

    END             reduce using rule 32 (Statement -> CompoundStatement .)
    SEMICOLON       reduce using rule 32 (Statement -> CompoundStatement .)
    ELSE            reduce using rule 32 (Statement -> CompoundStatement .)


state 30

    (33) Statement -> empty .

    END             reduce using rule 33 (Statement -> empty .)
    SEMICOLON       reduce using rule 33 (Statement -> empty .)
    ELSE            reduce using rule 33 (Statement -> empty .)


state 31

    (36) AssignmentStatement -> ID . ASSIGN Expression
    (70) ArrayAccess -> ID . LBRACKET Expression RBRACKET

    ASSIGN          shift and go to state 45
    LBRACKET        shift and go to state 46


state 32

    (37) AssignmentStatement -> ArrayAccess . ASSIGN Expression

    ASSIGN          shift and go to state 47


state 33

    (38) WriteStatement -> WRITELN . LPAREN ExpressionList RPAREN

    LPAREN          shift and go to state 48


state 34

    (34) ReadStatement -> READLN . LPAREN ArrayAccess RPAREN
    (35) ReadStatement -> READLN . LPAREN ID RPAREN

    LPAREN          shift and go to state 49


state 35

    (42) IfStatement -> IF . Expression THEN Statement
    (43) IfStatement -> IF . Expression THEN Statement ELSE Statement
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    Expression                     shift and go to state 50

state 36

    (44) WhileStatement -> WHILE . Expression DO Statement
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    Expression                     shift and go to state 58

state 37

    (45) ForStatement -> FOR . ID ASSIGN Expression TO Expression DO Statement

    ID              shift and go to state 59


state 38

    (17) FunctionDeclarations -> FunctionDeclaration FunctionDeclarations .

    BEGIN           reduce using rule 17 (FunctionDeclarations -> FunctionDeclaration FunctionDeclarations .)


state 39

    (19) FunctionDeclaration -> FUNCTION ID . LPAREN FormalParameters RPAREN COLON BasicType SEMICOLON Declarations CompoundStatement

    LPAREN          shift and go to state 60


state 40

    (7) VarDeclarationList -> VarDeclarationList VarDeclaration .

    ID              reduce using rule 7 (VarDeclarationList -> VarDeclarationList VarDeclaration .)
    FUNCTION        reduce using rule 7 (VarDeclarationList -> VarDeclarationList VarDeclaration .)
    BEGIN           reduce using rule 7 (VarDeclarationList -> VarDeclarationList VarDeclaration .)


state 41

    (8) VarDeclaration -> IdList COLON . Type SEMICOLON
    (11) Type -> . BasicType
    (12) Type -> . ArrayType
    (13) BasicType -> . INTEGER
    (14) BasicType -> . STRING
    (15) BasicType -> . BOOLEAN
    (16) ArrayType -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF BasicType

    INTEGER         shift and go to state 64
    STRING          shift and go to state 65
    BOOLEAN         shift and go to state 66
    ARRAY           shift and go to state 67

    Type                           shift and go to state 61
    BasicType                      shift and go to state 62
    ArrayType                      shift and go to state 63

state 42

    (10) IdList -> ID COMMA . IdList
    (9) IdList -> . ID
    (10) IdList -> . ID COMMA IdList

    ID              shift and go to state 20

    IdList                         shift and go to state 68

state 43

    (23) CompoundStatement -> BEGIN StatementList END .

    DOT             reduce using rule 23 (CompoundStatement -> BEGIN StatementList END .)
    END             reduce using rule 23 (CompoundStatement -> BEGIN StatementList END .)
    SEMICOLON       reduce using rule 23 (CompoundStatement -> BEGIN StatementList END .)
    ELSE            reduce using rule 23 (CompoundStatement -> BEGIN StatementList END .)
    FUNCTION        reduce using rule 23 (CompoundStatement -> BEGIN StatementList END .)
    BEGIN           reduce using rule 23 (CompoundStatement -> BEGIN StatementList END .)


state 44

    (25) StatementList -> StatementList SEMICOLON . Statement
    (26) Statement -> . AssignmentStatement
    (27) Statement -> . WriteStatement
    (28) Statement -> . ReadStatement
    (29) Statement -> . IfStatement
    (30) Statement -> . WhileStatement
    (31) Statement -> . ForStatement
    (32) Statement -> . CompoundStatement
    (33) Statement -> . empty
    (36) AssignmentStatement -> . ID ASSIGN Expression
    (37) AssignmentStatement -> . ArrayAccess ASSIGN Expression
    (38) WriteStatement -> . WRITELN LPAREN ExpressionList RPAREN
    (34) ReadStatement -> . READLN LPAREN ArrayAccess RPAREN
    (35) ReadStatement -> . READLN LPAREN ID RPAREN
    (42) IfStatement -> . IF Expression THEN Statement
    (43) IfStatement -> . IF Expression THEN Statement ELSE Statement
    (44) WhileStatement -> . WHILE Expression DO Statement
    (45) ForStatement -> . FOR ID ASSIGN Expression TO Expression DO Statement
    (23) CompoundStatement -> . BEGIN StatementList END
    (71) empty -> .
    (70) ArrayAccess -> . ID LBRACKET Expression RBRACKET

    ID              shift and go to state 31
    WRITELN         shift and go to state 33
    READLN          shift and go to state 34
    IF              shift and go to state 35
    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    BEGIN           shift and go to state 12
    END             reduce using rule 71 (empty -> .)
    SEMICOLON       reduce using rule 71 (empty -> .)

    Statement                      shift and go to state 69
    AssignmentStatement            shift and go to state 23
    WriteStatement                 shift and go to state 24
    ReadStatement                  shift and go to state 25
    IfStatement                    shift and go to state 26
    WhileStatement                 shift and go to state 27
    ForStatement                   shift and go to state 28
    CompoundStatement              shift and go to state 29
    empty                          shift and go to state 30
    ArrayAccess                    shift and go to state 32

state 45

    (36) AssignmentStatement -> ID ASSIGN . Expression
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    Expression                     shift and go to state 70

state 46

    (70) ArrayAccess -> ID LBRACKET . Expression RBRACKET
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    Expression                     shift and go to state 71

state 47

    (37) AssignmentStatement -> ArrayAccess ASSIGN . Expression
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    Expression                     shift and go to state 72

state 48

    (38) WriteStatement -> WRITELN LPAREN . ExpressionList RPAREN
    (39) ExpressionList -> . Expression
    (40) ExpressionList -> . ExpressionList COMMA Expression
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    ExpressionList                 shift and go to state 73
    Expression                     shift and go to state 74

state 49

    (34) ReadStatement -> READLN LPAREN . ArrayAccess RPAREN
    (35) ReadStatement -> READLN LPAREN . ID RPAREN
    (70) ArrayAccess -> . ID LBRACKET Expression RBRACKET

    ID              shift and go to state 76

    ArrayAccess                    shift and go to state 75

state 50

    (42) IfStatement -> IF Expression . THEN Statement
    (43) IfStatement -> IF Expression . THEN Statement ELSE Statement
    (57) Expression -> Expression . PLUS Expression
    (58) Expression -> Expression . MINUS Expression
    (59) Expression -> Expression . TIMES Expression
    (60) Expression -> Expression . MOD Expression
    (61) Expression -> Expression . DIV Expression
    (62) Expression -> Expression . LT Expression
    (63) Expression -> Expression . GT Expression
    (64) Expression -> Expression . EQ Expression
    (65) Expression -> Expression . NEQ Expression
    (66) Expression -> Expression . LTE Expression
    (67) Expression -> Expression . GTE Expression
    (68) Expression -> Expression . AND Expression
    (69) Expression -> Expression . OR Expression

    THEN            shift and go to state 77
    PLUS            shift and go to state 78
    MINUS           shift and go to state 79
    TIMES           shift and go to state 80
    MOD             shift and go to state 81
    DIV             shift and go to state 82
    LT              shift and go to state 83
    GT              shift and go to state 84
    EQ              shift and go to state 85
    NEQ             shift and go to state 86
    LTE             shift and go to state 87
    GTE             shift and go to state 88
    AND             shift and go to state 89
    OR              shift and go to state 90


state 51

    (41) Expression -> LENGTH . LPAREN Expression RPAREN

    LPAREN          shift and go to state 91


state 52

    (47) Expression -> LPAREN . Expression RPAREN
    (41) Expression -> . LENGTH LPAREN Expression RPAREN
    (46) Expression -> . NUMBER
    (47) Expression -> . LPAREN Expression RPAREN
    (48) Expression -> . TRUE
    (49) Expression -> . FALSE
    (50) Expression -> . STRING_LITERAL
    (51) Expression -> . ID
    (52) Expression -> . ID LBRACKET Expression RBRACKET
    (53) Expression -> . ID LPAREN ActualParameters RPAREN
    (57) Expression -> . Expression PLUS Expression
    (58) Expression -> . Expression MINUS Expression
    (59) Expression -> . Expression TIMES Expression
    (60) Expression -> . Expression MOD Expression
    (61) Expression -> . Expression DIV Expression
    (62) Expression -> . Expression LT Expression
    (63) Expression -> . Expression GT Expression
    (64) Expression -> . Expression EQ Expression
    (65) Expression -> . Expression NEQ Expression
    (66) Expression -> . Expression LTE Expression
    (67) Expression -> . Expression GTE Expression
    (68) Expression -> . Expression AND Expression
    (69) Expression -> . Expression OR Expression

    LENGTH          shift and go to state 51
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 52
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    STRING_LITERAL  shift and go to state 56
    ID              shift and go to state 57

    Expression                     shift and go to state 92

state 53

    (46) Expression -> NUMBER .
